tests/ui/err/has-too-many-arguments.stderr
error: too many arguments
 --> tests/ui/err/has-too-many-arguments.rs:1:1
  |
1 | #[logcall::logcall("info", "error")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `logcall::logcall` (in Nightly builds, run with -Z macro-backtrace for more info)
